--- a/SpotlightImages/src/SpotlightImages/project.json
+++ b/SpotlightImages/src/SpotlightImages/project.json
@@ -5,18 +5,13 @@
   },
 
   "dependencies": {
+    "Microsoft.NETCore.App": "1.0.0",
     "Microsoft.Extensions.Configuration": "1.0.0",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0",
-    "Microsoft.NETCore.App": {
-      // "type": "platform",
-      "version": "1.0.0"
-    }
+    "Microsoft.Extensions.Configuration.Json": "1.0.0"
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
-      "imports": "dnxcore50"
-    }
+    "netcoreapp1.0": { }
   },
 
   "runtimes": {
