--- a/SpotlightImages/src/SpotlightImages/project.json
+++ b/SpotlightImages/src/SpotlightImages/project.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "Microsoft.NETCore.App": "1.0.0",
     "Microsoft.Extensions.Configuration": "1.0.0",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0"
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "System.Drawing.Primitives": "4.0.0"
   },
 
   "frameworks": {
